chore: checkpoint all pending changes
